--- a/Gerenciamento.WebApi/Gerenciamento.WebApi.csproj
+++ b/Gerenciamento.WebApi/Gerenciamento.WebApi.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Gerenciamento.Domain\Gerenciamento.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
